ports/pc: Debugging, bugfixes.

--- a/ports/pc/Makefile
+++ b/ports/pc/Makefile
@@ -1,7 +1,9 @@
 CROSS_COMPILE ?=
 
 CFLAGS ?= -g -Werror -Woverflow
-CPPFLAGS ?= -I$(SRCDIR)
+CPPFLAGS ?= -I$(SRCDIR) -I$(PORTDIR)
 LDFLAGS ?= -g -lao -Wl,--as-needed
+LIBS += -lao
+INCLUDES += -I$(SRCDIR) -I$(PORTDIR)
 
 TARGET=$(BINDIR)/synth
