pc Makefile: Add main.o to port object list for PC

--- a/ports/pc/Makefile
+++ b/ports/pc/Makefile
@@ -5,6 +5,7 @@ CPPFLAGS ?= -I$(SRCDIR) -I$(PORTDIR)
 LDFLAGS ?= -g -lao -Wl,--as-needed
 LIBS += -lao
 INCLUDES += -I$(SRCDIR) -I$(PORTDIR)
+OBJECTS += $(OBJDIR)/main.o
 
 TARGET=$(BINDIR)/synth
 
